// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`FileTreeSearch renders correctly with a search query 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-kuuj3l"
  >
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-adornedStart MuiInputBase-adornedEnd css-pe16f2-MuiInputBase-root"
    >
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionStart css-1nowbqt-MuiInputAdornment-root"
      >
        <span
          aria-hidden="true"
          class="notranslate"
        >
          ​
        </span>
        <button
          aria-label="switch to content search"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-155wbr6-MuiButtonBase-root-MuiIconButton-root"
          data-mui-internal-clone-element="true"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wdc28j-MuiSvgIcon-root"
            data-testid="DescriptionIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8zm2 16H8v-2h8zm0-4H8v-2h8zm-3-5V3.5L18.5 9z"
            />
          </svg>
        </button>
      </div>
      <input
        aria-label="search files"
        class="MuiInputBase-input MuiInputBase-inputAdornedStart MuiInputBase-inputAdornedEnd css-e77w8q-MuiInputBase-input"
        placeholder="Search files..."
        type="text"
        value="test"
      />
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionEnd css-elo8k2-MuiInputAdornment-root"
      >
        <button
          aria-label="clear search"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeSmall css-1eswsun-MuiButtonBase-root-MuiIconButton-root"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-kqgmkm-MuiSvgIcon-root"
            data-testid="ClearIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FileTreeSearch renders correctly with empty search query 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root css-kuuj3l"
  >
    <div
      class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-adornedStart css-pe16f2-MuiInputBase-root"
    >
      <div
        class="MuiInputAdornment-root MuiInputAdornment-positionStart css-1nowbqt-MuiInputAdornment-root"
      >
        <span
          aria-hidden="true"
          class="notranslate"
        >
          ​
        </span>
        <button
          aria-label="switch to content search"
          class="MuiButtonBase-root MuiIconButton-root MuiIconButton-sizeSmall css-155wbr6-MuiButtonBase-root-MuiIconButton-root"
          data-mui-internal-clone-element="true"
          tabindex="0"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1wdc28j-MuiSvgIcon-root"
            data-testid="DescriptionIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M14 2H6c-1.1 0-1.99.9-1.99 2L4 20c0 1.1.89 2 1.99 2H18c1.1 0 2-.9 2-2V8zm2 16H8v-2h8zm0-4H8v-2h8zm-3-5V3.5L18.5 9z"
            />
          </svg>
        </button>
      </div>
      <input
        aria-label="search files"
        class="MuiInputBase-input MuiInputBase-inputAdornedStart css-e77w8q-MuiInputBase-input"
        placeholder="Search files..."
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;
